Fix save button spacing

--- a/assets/notes.css
+++ b/assets/notes.css
@@ -85,7 +85,7 @@
 }
 
 .save-button {
-    padding: 0.3em;
+    padding-left: 0.3em;
     font-size: large;
     padding-top: 0.6em;
 }
